--- a/src/main/java/org/sync/resources/setup.properties
+++ b/src/main/java/org/sync/resources/setup.properties
@@ -3,8 +3,8 @@
 #
 
 # imposta path per la factory dei plugin
-classpath=it.infomed.sync.common.plugin
-classpath=it.infomed.sync.sincronizzazione.plugin
+classpath=org.sync.common.plugin
+classpath=org.sync.sincronizzazione.plugin
 
 # dichiarazione regole di sincronizzazione
 # il gestore delle regole implementa una strategia generale di sincronizzazione
